--- a/sred-support-services.html
+++ b/sred-support-services.html
@@ -271,7 +271,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-12"><hgroup id="wb-cont"><p>Scientific research and experimental development (SR&amp;ED) tax incentives</p><h1>Support services and tools</h1></hgroup><p>Get help preparing your SR&amp;ED claim using support services and tools from the CRA.</p>
+		<div class="col-md-12"><hgroup id="wb-cont"><p>Scientific research and experimental development (SR&amp;ED) tax incentives</p><h1>Support services and tools</h1></hgroup><p>The CRA is here to assist you at every step of your claim journey, whether you are simply enquiring about the program, have a question about a project, or want to make a claim yourself.</p>
 		</div>
 		<!-- <div class="col-md-6 hidden-sm hidden-xs">
 			<img src="https://dummyimage.com/520x200/000000/FFFFFF.png" alt="" class="img-responsive pull-right mrgn-tp-lg">
@@ -283,59 +283,62 @@
 	<h2>Learn about the program</h2>
 	<div class="row wb-eqht-grd">
         <div class="col-lg-4 col-md-6">
-			<h3><a href="#">Attend an information session</a></h3>
+			<h3><a href="#">Attend an SR&ED webinar</a></h3>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+                euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+		</div><div class="col-lg-4 col-md-6">
+			<h3><a href="#">Request a tailored outreach session</a></h3>
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                 euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
 		</div><div class="col-lg-4 col-md-6">
 			<h3><a href="#">Visit our multimedia gallery</a></h3>
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                 euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-		</div><div class="col-lg-4 col-md-6">
-			<h3><a href="#">Tailored outreach session</a></h3>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
 		</div>
     </div>
 
    
-        <h2>Submitting your first claim</h2>
+        <h2>Find out if your work may be eligible</h2>
         <div class="row wb-eqht-grd">
             <div class="col-lg-4 col-md-6">
-                <h3><a href="#">Self-assessment and Learning Tool (SALT)</a></h3>
+                <h3><a href="#">Refer to our Eligibility of Work Guidelines</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div><div class="col-lg-4 col-md-6">
-                <h3><a href="#">Client portal</a></h3>
+                <h3><a href="#">Use the Self-Assessment and Learning Tool</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div>
             <div class="col-lg-4 col-md-6">
-                <h3><a href="#">Contact an SR&ED specialist</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
-            </div><div class="col-lg-4 col-md-6">
-                <h3><a href="#">How to file your claim</a></h3>
+                <h3><a href="#">Request a Pre-claim consultation</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div>
         
         </div>
-        <h2>Resources for existing claimants</h2>
+        <h2>Prepare your claim</h2>
         <div class="row wb-eqht-grd">
             <div class="col-lg-4 col-md-6">
-                <h3><a href="#">Request a pre-claim consultation
+                <h3><a href="#">Consult our step-by-step guide: How to prepare your claim
                 </a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div>
             <div class="col-lg-4 col-md-6">
-                <h3><a href="#">First-Time Claimant Advisory Service (FTCAS)</a></h3>
+                <h3><a href="#">Access the SR&ED Client Portal</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
             </div><div class="col-lg-4 col-md-6">
-                <h3><a href="#">SR&amp;ED service visit</a></h3>
+                <h3><a href="#">Contact an SR&ED Specialist</a></h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+            </div>
+        </div>
+	        <h2>Still have questions? We’re here to help!</h2>
+        <div class="row wb-eqht-grd">
+            <div class="col-lg-4 col-md-6">
+                <h3><a href="#">Contact us</a></h3>
+                <p>Call us if you have questions about the SR&ED program, including eligibility, calculating expenditures, submitting your claim, or tracking the status of a claim.</p>
             </div>
         </div>
 </section>
