--- a/NonResPortal/index.html
+++ b/NonResPortal/index.html
@@ -367,6 +367,13 @@ Help with using your CRA account</h1>
                             <p class="wb-inv"></p>
                         </div>
                     </div>
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                        <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
+                            <h3 class="h4 mrgn-tp-0"><a href="#">About My NR account</a></h3>
+                            <p>What's new, available serivces</p>
+                            <p class="wb-inv"></p>
+                        </div>
+                    </div>
                     <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_rac">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client/about-represent-a-client.html" class="stretched-link">About Represent a Client</a></h3>
@@ -381,6 +388,7 @@ Help with using your CRA account</h1>
                             <p class="wb-inv"></p>
                         </div>
                     </div>
+                    
                 </div>
             </section>
 
