--- a/NonResPortal/index.html
+++ b/NonResPortal/index.html
@@ -307,6 +307,10 @@ Help with using your CRA account</h1>
                             <input type="radio" name="accounts" id="MybaRadio" value="fltr_myba" class="wb-tagfilter-ctrl">
                             <label for="MybaRadio">My Business Account</label>
                         </div>
+                        <div class="radio ">
+                            <input type="radio" name="accounts" id="MyaRadio" value="fltr_mya" class="wb-tagfilter-ctrl">
+                            <label for="MyaRadio">My Non-Resident Account</label>
+                        </div>
                         <div class="radio">
                             <input type="radio" name="accounts" id="RacRadio" value="fltr_rac" class="wb-tagfilter-ctrl">
                             <label for="RacRadio">Represent a Client</label>
