--- a/NonResPortal/index.html
+++ b/NonResPortal/index.html
@@ -277,7 +277,10 @@ Help with using your CRA account</h1>
 
 
     <div data-wb-urlmapping="{
-	&quot;type=myacct&quot;: [{&quot;action&quot;: &quot;selectInput&quot;, &quot;source&quot;: &quot;#acct-options&quot;, &quot;value&quot;: &quot;fltr_mya&quot;}, { &quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.url-fltr:not([data-wb-tags~=\&quot;fltr_mya\&quot;])&quot;, &quot;class&quot;: &quot;wb-tgfltr-out&quot; }], &quot;type=mybusacct&quot;: [{&quot;action&quot;: &quot;selectInput&quot;, &quot;source&quot;: &quot;#acct-options&quot;, &quot;value&quot;: &quot;fltr_myba&quot;}, { &quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.url-fltr:not([data-wb-tags~=\&quot;fltr_myba\&quot;])&quot;, &quot;class&quot;: &quot;wb-tgfltr-out&quot; }], &quot;type=rac&quot;: [{&quot;action&quot;: &quot;selectInput&quot;, &quot;source&quot;: &quot;#acct-options&quot;, &quot;value&quot;: &quot;fltr_rac&quot;}, { &quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.url-fltr:not([data-wb-tags~=\&quot;fltr_rac\&quot;])&quot;, &quot;class&quot;: &quot;wb-tgfltr-out&quot; }]
+	&quot;type=myacct&quot;: [{&quot;action&quot;: &quot;selectInput&quot;, &quot;source&quot;: &quot;#acct-options&quot;, &quot;value&quot;: &quot;fltr_mya&quot;}, { &quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.url-fltr:not([data-wb-tags~=\&quot;fltr_mya\&quot;])&quot;, &quot;class&quot;: &quot;wb-tgfltr-out&quot; }],
+    &quot;type=mybusacct&quot;: [{&quot;action&quot;: &quot;selectInput&quot;, &quot;source&quot;: &quot;#acct-options&quot;, &quot;value&quot;: &quot;fltr_myba&quot;}, { &quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.url-fltr:not([data-wb-tags~=\&quot;fltr_myba\&quot;])&quot;, &quot;class&quot;: &quot;wb-tgfltr-out&quot; }],
+    &quot;type=rac&quot;: [{&quot;action&quot;: &quot;selectInput&quot;, &quot;source&quot;: &quot;#acct-options&quot;, &quot;value&quot;: &quot;fltr_rac&quot;}, { &quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.url-fltr:not([data-wb-tags~=\&quot;fltr_rac\&quot;])&quot;, &quot;class&quot;: &quot;wb-tgfltr-out&quot; }], 
+    &quot;type=mynracct&quot;: [{&quot;action&quot;: &quot;selectInput&quot;, &quot;source&quot;: &quot;#nracct-options&quot;, &quot;value&quot;: &quot;fltr_mynra&quot;}, { &quot;action&quot;: &quot;addClass&quot;, &quot;source&quot;: &quot;.url-fltr:not([data-wb-tags~=\&quot;fltr_mynra\&quot;])&quot;, &quot;class&quot;: &quot;wb-tgfltr-out&quot; }],
 }"></div>
 <p>Find help with using My Account, My Business Account and Represent a Client. Learn about registering for and managing your account, updating your personal and business information, and getting and giving authorization.</p>
 <section id="filteredFAQ" class="wb-tagfilter provisional wb-filter" data-wb-filter="{
@@ -311,8 +314,8 @@ Help with using your CRA account</h1>
                             <input type="radio" name="accounts" id="RacRadio" value="fltr_rac" class="wb-tagfilter-ctrl">
                             <label for="RacRadio">Represent a Client</label>
                         </div>
-			<div class="radio">
-                            <input type="radio" name="accounts" id="MyaRadio" value="fltr_mya" class="wb-tagfilter-ctrl">
+			            <div class="radio">
+                            <input type="radio" name="accounts" id="MyaRadio" value="fltr_mynra" class="wb-tagfilter-ctrl">
                             <label for="MyaRadio">My Non-Resident Account</label>
                         </div>
                     </fieldset>
@@ -326,17 +329,17 @@ Help with using your CRA account</h1>
         <div class="col-md-8 pull-right">
             <hr>
             <section class="wb-tagfilter-items">
-                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Registration</h2>
+                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">Registration</h2>
                 <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
 
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/register-cra-sign-in-services.html?account=mya">Register for a CRA account</a></h3>
                             <p>Registration instructions, sign-in options</p>
                             <p class="wb-inv">Register, Registration, Sign, Set up, Create, Enroll, Get, Account, Access, Need, New, make</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/verify-identity.html" class="stretched-link">Verify your identity</a></h3>
                             <p>The document verification service, CRA security code</p>
@@ -347,7 +350,7 @@ Help with using your CRA account</h1>
             </section>
 
             <section class="wb-tagfilter-items">
-                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">About the CRA account portals</h2>
+                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">About the CRA account portals</h2>
                 <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
 
                     <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
@@ -371,9 +374,9 @@ Help with using your CRA account</h1>
                             <p class="wb-inv"></p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                            <h3 class="h4 mrgn-tp-0"><a href="#">About My NR account</a></h3>
+                            <h3 class="h4 mrgn-tp-0"><a href="#">About My NR Account</a></h3>
                             <p>What's new, available serivces</p>
                             <p class="wb-inv"></p>
                         </div>
@@ -397,7 +400,7 @@ Help with using your CRA account</h1>
             </section>
 
             <section class="wb-tagfilter-items">
-                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Review and update your information</h2>
+                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">Review and update your information</h2>
                 <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
                     <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
@@ -420,7 +423,7 @@ Help with using your CRA account</h1>
                             <p class="wb-inv">Client, Information, Review, Update, Updating, Change, Changing, Modify, view, RepID, BN, GroupID, View, Transactions, List, Authorize, Authorization, Manage, Delete, Notices, Employees, Representatives, Suspend, Cancel, Information, Delete, Mail, Online, business, name, administrators, ID, number</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba  fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba  fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/direct-deposit.html" class="stretched-link">Direct Deposit</a></h3>
                             <p>Sign up for or change your direct deposit information</p>
@@ -431,7 +434,7 @@ Help with using your CRA account</h1>
             </section>
 
             <section class="wb-tagfilter-items">
-                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Access your CRA account</h2>
+                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">Access your CRA account</h2>
                 <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
                     <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
@@ -440,14 +443,14 @@ Help with using your CRA account</h1>
                             <p class="wb-inv">Available, Availability, Error, Access, Sign-in, Time, hours, Unable, Login, Browser, Java, Cache, Service, Site, Working, Maintenance, Open, Closed, Security, Operation, Website, Down, Today, Loading, Err.028, Troubleshooting, cookies</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/cra-userid-password.html" class="stretched-link">About CRA user ID and password</a></h3>
                             <p>How to use or recover a CRA user ID and password, change your sign-in option</p>
                             <p class="wb-inv">CRA, ID, userID, password, create, credential, sign-in, login, forgotten, recover, revoked, options, security, questions, answers, account, get, access, registration, register, set, change, new, information, locked, canada[.ca]/cra-revoked-userid</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/sign-in-partners.html" class="stretched-link">About Sign-In Partners</a></h3>
                             <p>When to use a Sign-In Partner, your privacy, switching Sign-In Partners</p>
@@ -461,14 +464,14 @@ Help with using your CRA account</h1>
                             <p class="wb-inv">Provincial, Partners, ID, Government, Identification, Sign-in, Login, British, BC, Services, Card, Alberta.ca, Account, Register, Access, Information, Digital, myalberta</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/multi-factor-authentication.html" class="stretched-link">Multi-factor authentication (MFA)</a></h3>
                             <p>MFA options, what to do if you can't receive your one-time passcode</p>
                             <p class="wb-inv">MFA, Multi, factor, Authentication, Enroll, One-time, Passcodes, Authenticator, Locked , out, Wrong, Call, Text, Bingo, QR, Codes, Number, Phone, Grid, New, Telephone, Old, Changed, Changes, Update, Unlocked</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/locked-account.html" class="stretched-link">Locked account</a></h3>
                             <p>Recover a locked account, avoid getting locked out</p>
@@ -477,9 +480,9 @@ Help with using your CRA account</h1>
                     </div>
             </div></section>
             <section class="wb-tagfilter-items">
-                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac">Manage your CRA account</h2>
+                <h2 class="h3 mrgn-tp-md url-fltr" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">Manage your CRA account</h2>
                 <div class="mrgn-tp-md mrgn-lft-sm mrgn-rght-sm row wb-eqht-grd">
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_rac fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/keep-sign-in-services-secure.html" class="stretched-link">Keep your CRA account secure</a></h3>
                             <p>Manage security options, monitor for suspicious activity</p>
@@ -493,21 +496,21 @@ Help with using your CRA account</h1>
                             <p class="wb-inv">client, request, authorization, authorized, receive, access, repID, ID, RAC, Identifier, Representative, Business number, BN, Group, groupID, AUT-01, Aut-1, Aut01, Deceased, Dead, Estate, Trustee, Form, Add, Poa, Power, Attorney, Certification, Signature, page</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/overview.html" class="stretched-link">Authorize a representative</a></h3>
                             <p>Who can be a representative, your responsibilities, levels of access you can give, ways to authorize</p>
                             <p class="wb-inv">client, request, authorization, authorized, receive, access, repID, ID, RAC, Identifier, Representative, Business number, BN, Group, groupID, AUT-01, Aut-1, Aut01, Deceased, Dead, Estate, Trustee, Form, Add, Poa, Power, Attorney, Certification, Signature, page</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html" class="stretched-link">Confirm an authorization request</a></h3>
                             <p>How to verify authorization requests submitted by representatives in a CRA account</p>
                             <p class="wb-inv">Authorization, Authorized, Representative, Confirm, Request, access</p>
                         </div>
                     </div>
-                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba">
+                    <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mya fltr_myba fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
                             <h3 class="h4 mrgn-tp-0"><a href="https://www.canada.ca/en/revenue-agency/services/tax/representative-authorization/cancel.html" class="stretched-link">Cancel a representative's authorization</a></h3>
                             <p>How to cancel your representative's authorization</p>
