--- a/NonResPortal/index.html
+++ b/NonResPortal/index.html
@@ -376,7 +376,7 @@ Help with using your CRA account</h1>
                     </div>
                     <div class="col-md-6 tag-fltr url-fltr px-2" data-wb-tags="fltr_mynra">
                         <div class="panel panel-default panel-body position-relative brdr-rds-0 hght-inhrt">
-                            <h3 class="h4 mrgn-tp-0"><a href="#">About My NR Account</a></h3>
+                            <h3 class="h4 mrgn-tp-0"><a href="#">About My Non-Resident Account</a></h3>
                             <p>What's new, available serivces</p>
                             <p class="wb-inv"></p>
                         </div>
